# excaliframe

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  CLOUD_SETUP.md  CONFLUENCE_SETUP.md  CONSTRAINTS.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile.dev  Dockerfile.plugin  Dockerfile.tunnel  GET_LICENSE.md  LOCAL_SETUP.md  Makefile  NEXTSTEPS.md  NOW.md  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY_ROADMAP.md  Stackfile.md  TESTING.md  TROUBLESHOOTING.md  TROUBLESHOOTING_INSTALL.md  app.yaml  atlassian-connect.json  atlassian-connect.prod.json.example  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.yml  go.mod  main.go  manifest.yml  package-lock.json  package.json  pnpm-lock.yaml  rspack.config.js  server.ts  (+5 more)
docs/: CLOUD_SETUP.md  DEPLOYMENT.md  FAQ.md  LOCAL_SETUP.md  SECURITY.md  TESTING.md  WHY_SERVER.md
e2e/: .gitignore  Makefile  README.md  conftest.py  list_tests.py  pyproject.toml
e2e/confluence/: .gitignore  accounts.json.example  conftest.py  test_v2_storage.py
e2e/fixtures/: .gitignore  a3.json  a4.json  a5.json  generate.py
e2e/helpers/: confluence.py  join_code.py  seed.py  server.py
e2e/pages/: __init__.py  detail.py  editor.py  join.py  listing.py  share_panel.py  toolbar.py
e2e/tests/: test_collab_cursors.py  test_collab_sync.py  test_cross_browser_collab.py  test_drawing_crud.py  test_editor.py  test_encryption.py  test_join_follower.py  test_share_owner.py
memories/: forge-api-scopes.md  forge-debugging-playbook.md  v2-attachment-storage.md
screenshots/: .gitkeep
scripts/: pre-push.sh  (+19 more)
(+111 files in other folders)
