[project]
name = "excaliframe-e2e"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.51",
    "pytest>=8.0",
    "pytest-playwright>=0.6",
    "pytest-html>=4.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ipdb>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "collab: tests requiring multi-profile collaboration",
    "slow: tests that take >30s",
]
timeout = 60
